--- a/Purchasing.Web/Web.Training.config
+++ b/Purchasing.Web/Web.Training.config
@@ -5,7 +5,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
   <connectionStrings xdt:Transform="Replace">
-    <add name="MainDB" connectionString="data source=joeymousepads;Initial Catalog=PrePurchasingTraining;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasingTraining;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--Add analytics key for GA-->
