--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -24,6 +24,7 @@
   <package id="jQuery.Validation" version="1.9" />
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="Jurassic" version="2.1.1" />
+  <package id="Lucene.Net" version="2.9.4.1" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net40" />
   <package id="MiniProfiler" version="1.9" />
@@ -39,6 +40,7 @@
   <package id="NPOI" version="1.2.4" />
   <package id="SassAndCoffee.Core" version="2.0.2.0" />
   <package id="SassAndCoffee.Ruby" version="2.0.2.0" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
   <package id="UcdArch" version="3.3.0.76" />
   <package id="UcdArch.Mvc" version="3.3.0.76" />
   <package id="UcdArch.NHibernate" version="3.3.0.76" />
