--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="Cassette.Web" version="1.2.0" />
   <package id="Castle.Core" version="3.0.0.4001" />
   <package id="Castle.Windsor" version="3.0.0.4001" />
+  <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" />
   <package id="Dapper" version="1.8" />
   <package id="DataAnnotationsExtensions" version="1.0.2.0" />
@@ -38,6 +39,7 @@
   <package id="NHibernate.Caches.SysCache2" version="3.2.0.4000" />
   <package id="NHibernateProfiler" version="1.0.0.937" />
   <package id="NPOI" version="1.2.4" />
+  <package id="Quartz" version="2.0.1" targetFramework="net40" />
   <package id="SassAndCoffee.Core" version="2.0.2.0" />
   <package id="SassAndCoffee.Ruby" version="2.0.2.0" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
