All vOrderHistory fields are being indexed
also returning direct orderhistory objects

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -980,6 +980,7 @@
     <Content Include="Views\Admin\ValidateChildWorkgroups.cshtml" />
     <Content Include="Web.ReleaseAzure.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <None Include="settimezone.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
