--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -285,7 +285,7 @@
     <Compile Include="App_Start\CreateIndexes.cs" />
     <Compile Include="App_Start\NHibernateProfilerBootstrapper.cs" />
     <Compile Include="App_Start\RegisterClientValidationExtensions.cs" />
-    <Compile Include="App_Start\WorkerRole.cs" />
+    <Compile Include="App_Start\VerifyIndexesRole.cs" />
     <Compile Include="Attributes\AuthorizeApplicationAccessAttribute.cs" />
     <Compile Include="Attributes\AuthorizeOrderAccessAttribute.cs" />
     <Compile Include="Attributes\AuthorizeRequesterInOrderWorkgroupAttribute.cs" />
