--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -28,7 +28,7 @@
   <package id="Lucene.Net" version="2.9.4.1" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net40" />
-  <package id="MiniProfiler" version="1.9" />
+  <package id="MiniProfiler" version="2.0.2" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" />
   <package id="Mvc3Futures" version="3.0.20105.0" />
   <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" />
