Added a view for workgroup vendors that can be exported to excel. Changed navigation buttons to get them to fit.

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -990,6 +990,7 @@
     <Content Include="Views\System\Indexes.cshtml" />
     <Content Include="Views\User\EditEmail.cshtml" />
     <Content Include="Views\Shared\_CommonWorkgroupForm.cshtml" />
+    <Content Include="Views\Workgroup\ExportableVendorList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
