--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -991,6 +991,7 @@
     <Content Include="Views\User\EditEmail.cshtml" />
     <Content Include="Views\Shared\_CommonWorkgroupForm.cshtml" />
     <Content Include="Views\Workgroup\ExportableVendorList.cshtml" />
+    <Content Include="Views\DepartmentalAdminRequest\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
