added a view for the email preferences for when an attachment is added or a comment is added

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -992,6 +992,7 @@
     <Content Include="Views\Shared\_CommonWorkgroupForm.cshtml" />
     <Content Include="Views\Workgroup\ExportableVendorList.cshtml" />
     <Content Include="Views\DepartmentalAdminRequest\Details.cshtml" />
+    <Content Include="Views\User\_GeneralEmailPreferences.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
