--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -282,6 +282,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\CreateIndexes.cs" />
+    <Compile Include="App_Start\Jobs\CreateLookupIndexsJob.cs" />
+    <Compile Include="App_Start\Jobs\CreateOrderIndexsJob.cs" />
     <Compile Include="App_Start\NHibernateProfilerBootstrapper.cs" />
     <Compile Include="App_Start\RegisterClientValidationExtensions.cs" />
     <Compile Include="App_Start\VerifyIndexesRole.cs" />
