--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -42,6 +42,7 @@
   <package id="Quartz" version="2.0.1" targetFramework="net40" />
   <package id="SassAndCoffee.Core" version="2.0.2.0" />
   <package id="SassAndCoffee.Ruby" version="2.0.2.0" />
+  <package id="Sendgrid" version="1.0.1" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
   <package id="UcdArch" version="3.3.0.76" />
   <package id="UcdArch.Mvc" version="3.3.0.76" />
