server to automatically run sql server backups

--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <Compile Include="Domain\Account.cs" />
     <Compile Include="Domain\Approval.cs" />
+    <Compile Include="Domain\BackupLog.cs" />
     <Compile Include="Domain\BugTracking.cs" />
     <Compile Include="Domain\Building.cs" />
     <Compile Include="Domain\DepartmentalAdminRequest.cs" />
