--- a/Purchasing.WS/Purchasing.WS.csproj
+++ b/Purchasing.WS/Purchasing.WS.csproj
@@ -100,6 +100,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -111,12 +112,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountInfo.cs" />
+    <Compile Include="AzureStorageService.cs" />
     <Compile Include="FinancialDocumentStatus.cs" />
     <Compile Include="FinancialRoleSystemService.cs" />
     <Compile Include="FinancialSystemService.cs" />
     <Compile Include="IFinancialRoleSystemService.cs" />
     <Compile Include="IFinancialSystemService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\AzureStorage\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service References\FinancialRoleService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -135,6 +142,38 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Service References\AzureStorage\Microsoft.SqlServer.Management.Dac.Services.wsdl" />
+    <None Include="Service References\AzureStorage\Microsoft.SqlServer.Management.Dac.ServiceTypes.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\AzureStorage\Purchasing.WS.AzureStorage.ExportResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\AzureStorage\Purchasing.WS.AzureStorage.ExportWithMaskedDataResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\AzureStorage\Purchasing.WS.AzureStorage.GetStatusResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\AzureStorage\Purchasing.WS.AzureStorage.ImportResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\AzureStorage\Purchasing.WS.AzureStorage.PostStatusResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\AzureStorage\Purchasing.WS.AzureStorage.SelectiveExportResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\AzureStorage\Purchasing.WS.AzureStorage.TestResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\AzureStorage\service.wsdl" />
+    <None Include="Service References\AzureStorage\service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\AzureStorage\service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\FinancialRoleService\financialSystemRoleServiceSOAP2.wsdl" />
     <None Include="Service References\FinancialRoleService\Purchasing.WS.FinancialRoleService.simpleAccountInfo.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -147,6 +186,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Service References\AzureStorage\" />
     <WCFMetadataStorage Include="Service References\FinancialRoleService\" />
     <WCFMetadataStorage Include="Service References\PurchaseDocumentService\" />
   </ItemGroup>
@@ -202,6 +242,18 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\AzureStorage\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\AzureStorage\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\AzureStorage\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
