hard coded the url for emailing

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -57,7 +57,7 @@
     </errorFilter>
   </elmah>
   <connectionStrings>
-    <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="1.0.0.0" />
