--- a/Purchasing.Web/Web.Debug.config
+++ b/Purchasing.Web/Web.Debug.config
@@ -11,7 +11,7 @@
   -->
 
   <connectionStrings xdt:Transform="Replace">
-    <add name="MainDB" connectionString="data source=VOGEL;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <system.web>
