Added report to group totals by primary org.

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -1021,6 +1021,7 @@
     <Content Include="Views\System\Emails.cshtml" />
     <Content Include="Views\Workgroup\UpdateMultipleAccounts.cshtml" />
     <Content Include="Views\Report\TotalByWorkgroup.cshtml" />
+    <Content Include="Views\Report\TotalByPrimaryOrg.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
