wip tring to test it

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -1027,6 +1027,7 @@
     <Content Include="Views\Report\TotalByPrimaryOrg.cshtml" />
     <Content Include="Views\Report\TotalByVendor.cshtml" />
     <Content Include="Views\Workgroup\ManageSyncPermissions.cshtml" />
+    <Content Include="Views\WorkgroupPermissions\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
