DB change. Added new Email Queue table
Where the EmailQueue was being added to, the EmailQueueV2 is now being added to. We would not want to remove it as there may be unprocessed emails when and if this goes live.

--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Domain\BackupLog.cs" />
     <Compile Include="Domain\BugTracking.cs" />
     <Compile Include="Domain\Building.cs" />
+    <Compile Include="Domain\EmailQueueV2.cs" />
     <Compile Include="Domain\DepartmentalAdminRequest.cs" />
     <Compile Include="Domain\HistoryReceivedLineItem.cs" />
     <Compile Include="Domain\OrderRequestSave.cs" />
