Added a AFS Testing config

--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -103,6 +103,11 @@
     <OutputPath>bin\Training2\</OutputPath>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'AFSTesting|AnyCPU'">
+    <OutputPath>bin\AFSTesting\</OutputPath>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Castle.Core">
       <HintPath>..\packages\Castle.Core.3.0.0.4001\lib\net40-client\Castle.Core.dll</HintPath>
