--- a/Purchasing.WS/packages.config
+++ b/Purchasing.WS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.0.0.4001" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.0.0.4001" targetFramework="net40" />
   <package id="Microsoft.Data.Edm" version="5.0.2" targetFramework="net40" />
   <package id="Microsoft.Data.OData" version="5.0.2" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
