--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -74,6 +74,7 @@
     <add key="AfsToken" value="stage" />
     <add key="aspnet:MaxHttpCollectionKeys" value="3000" />
     <add key="aspnet:MaxJsonDeserializerMembers" value="3000" />
+    <add key="NewRelic.AppName" value="PrePurchasing" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
