--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -35,6 +35,7 @@
   <package id="Mvc3Futures" version="3.0.20105.0" />
   <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" targetFramework="net40" />
   <package id="MvcContrib.Mvc3-ci" version="3.0.100.0" targetFramework="net40" />
+  <package id="NewRelicWindowsAzure" version="2.20.25.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="NHibernate" version="3.3.0.4000" />
   <package id="NHibernate.Caches.SysCache2" version="3.2.0.4000" />
