new access query service for closedAccess
replaces direct mapping of vClosedAccess with new dapper query against
user specific access function.  Also, I added the function to the db
project.

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -403,6 +403,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RouteConfigurator.asax.cs" />
+    <Compile Include="Services\AccessQueryService.cs" />
     <Compile Include="Services\FileService.cs" />
     <Compile Include="Services\IndexSearchService.cs" />
     <Compile Include="Services\IndexService.cs" />
