laid groundwork for index update operations
index service's core index manipulation method now can differentiate
between a rebuild/recreate and an update of an index

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -314,6 +314,7 @@
     <Compile Include="App_Start\Jobs\CreateLookupIndexsJob.cs" />
     <Compile Include="App_Start\Jobs\CreateOrderIndexsJob.cs" />
     <Compile Include="App_Start\Jobs\EmailJob.cs" />
+    <Compile Include="App_Start\Jobs\UpdateOrderIndexsJob.cs" />
     <Compile Include="App_Start\Jobs\VerifyPermissionsJob.cs" />
     <Compile Include="App_Start\NHibernateProfilerBootstrapper.cs" />
     <Compile Include="App_Start\RegisterClientValidationExtensions.cs" />
